# TexSyn

./: .gitignore  .travis.yml  Cargo.toml  README.md  benchmark.sh
libtexsyn/: Cargo.toml
libtexsyn/src/: common.rs  errors.rs  lib.rs  neighbourhood.rs  operators.rs  pyramid.rs  quilt.rs  random.rs
libtexsyn/src/generators/: mod.rs  search.rs
libtexsyn/src/generators/patch/: quilt.rs
libtexsyn/src/generators/per_pixel/: mod.rs  search.rs  wei_levoy.rs
src/: common.rs  distance.rs  errors.rs  lib.rs  pixel_search.rs  quilt.rs  search.rs  wei_levoy.rs
