[package]
name = "TexSyn"
version = "0.1.0"
authors = ["r.chavignat@gmail.com"]
repository = "https://github.com/Robzz/TexSyn"

[[bin]]
name = "pixel_search"
path = "src/pixel_search.rs"

[[bin]]
name = "quilt"
path = "src/quilt.rs"

[dependencies]
clap = "2.24.2"
libtexsyn = { path = "./libtexsyn" }

[workspace]
members = ["./libtexsyn"]
