[package]
name = "libtexsyn"
version = "0.1.0"
authors = ["R.Chavignat <r.chavignat@gmail.com>"]

[dependencies]
approx = "0.1.1"
conv = "0.3.3"
error-chain = "0.11.0"
float-cmp = "0.2.4"
imageproc = "0.10.0"
image = "0.15.0"
noise = "0.4.1"
num-traits = "0.1.40"
#ndimage = { git = "https://github.com/Robzz/ndimage", branch = "master" }
ndimage = { path = "../../ndimage", branch = "master" }
rand = "0.3.16"
rayon = "0.8.2"
term = "0.4.6"
time = "*"

[dependencies.ndarray]
version = "0.10.6"
features = ["serde-1"]
